update teste em portifolio

--- a/0-teste/index.html
+++ b/0-teste/index.html
@@ -45,7 +45,7 @@
         <!-- <h1>sobre</h1> -->
         <div class=" container">
             <div>
-                <img src="https://cdn-icons-png.flaticon.com/512/4359/4359784.png" alt="iamgem internet">
+                <img src=" https://avatars.githubusercontent.com/u/85588242?s=400&u=27aa7f7820a9f1556e41ce3deb52f95ca1a2b0c6&v=4" alt="iamgem internet">
             </div>
             <div class="sobre-texto">
                 <!-- <h1>Meu nome é Edson</h1> -->
