--- a/0-teste/portifolio3/index.html
+++ b/0-teste/portifolio3/index.html
@@ -26,7 +26,12 @@
         Ola , eu sou o Edson
       </p>
       <!-- <p>Data do evento:</p> -->
-      <p class="event-date">Lorem ipsum dolor sit ame</p>
+      <p class="event-date">Tenho conhecimentos  HTML , CSS e Java Script</p>
+      <p class="event-date"> Lógica de programação, Java, Spring</p>
+      <p class="event-date"> Banco de dados postgreSql e Sql Server, linguagens SQL</p>
+      <p class="event-date"> E nas metodologias Scrum, PMBOK, Cascata, Prototipagem,</p>
+      <p class="event-date">  Espiral, Incremental, RUP e XP.</p> 
+
     </div>
     <div id="">
       <div style="">
@@ -121,23 +126,31 @@
   </section>
   <section id="details">
     <div class="detail" id="detail-1">
-      <img src="https://images.unsplash.com/photo-1547082299-de196ea013d6?ixlib=rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=6000" alt="" />
+      <img
+        src="https://images.unsplash.com/photo-1547082299-de196ea013d6?ixlib=rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=6000"
+        alt="" />
       <div class="detail-description">
         <h3>Conheça alguns de meus projetos</h3>
       </div>
     </div>
     <div class="detail" id="detail-2">
       <div class="detail-description">
-        <h3>SysEstoque 2</h3>
+        <h3>SysEstoque 1</h3>
         <ul>
           <li>Projeto feito em Java para Desktop (1.8)</li>
-          <li>Usando a biblioteca Swing  </li>
+          <li>Usando a biblioteca Swing </li>
           <li>Banco de dados postgreSql (9.6) , sem Hibernate</li>
           <li>Ide usada NetBeans 8.2</li>
           <li>Contruido para satisfazer a uma necessidade na empresa que eu trabalho</li>
         </ul>
+        <div class="visit">
+
+          <a href="https://github.com/Sousa-Edson/SysEstoque1" style="" class="btn  ">Link do projeto</a>
+        </div>  
+      
       </div>
-      <img src="img/hrz-4.jpg" alt="" />
+      <img src="img/Capturar.PNG" alt="" />
+      
     </div>
     <div class="detail" id="detail-3">
       <img src="img/hrz-5.jpg" alt="" />
@@ -156,12 +169,12 @@
   </section>
   <section id="cta">
     <h3>Gostou? Então entre em contato:</h3>
-    <div >
-       <div style="">
+    <div>
+      <div style="">
         <a href="#" style="" class="btn contato">GitHub</a>
       </div>
       <div style="">
-        <a href="#"  style=" " class="btn contato">Linkdin</a>
+        <a href="#" style=" " class="btn contato">Linkdin</a>
       </div>
     </div>
     <!-- <a  href="#" class="btn">Solicitar Inscrição</a> -->
