--- a/0-teste/portifolio3/index.html
+++ b/0-teste/portifolio3/index.html
@@ -144,7 +144,6 @@
           <li>Contruido para satisfazer a uma necessidade na empresa que eu trabalho</li>
         </ul>
         <div class="visit">
-
           <a href="https://github.com/Sousa-Edson/SysEstoque1" style="" class="btn  ">Link do projeto</a>
         </div>  
       
@@ -164,17 +163,20 @@
           <li>Banco de dados Microsoft SQL Server</li>
           <li>Elaborado como projeto integrador</li>
         </ul>
+        <div class="visit">
+          <a href="https://github.com/ProfNpc/adocao-animais" style="" class="btn  ">Link do projeto</a>
+        </div> 
       </div>
     </div>
   </section>
   <section id="cta">
     <h3>Gostou? Então entre em contato:</h3>
     <div>
-      <div style="">
-        <a href="#" style="" class="btn contato">GitHub</a>
+      <div >
+        <a href="https://github.com/Sousa-Edson"  style="" class="btn contato">GitHub</a>
       </div>
-      <div style="">
-        <a href="#" style=" " class="btn contato">Linkdin</a>
+      <div >
+        <a href="https://www.linkedin.com/in/edson-sousa-b0769a181/"  class="btn contato">Linkdin</a>
       </div>
     </div>
     <!-- <a  href="#" class="btn">Solicitar Inscrição</a> -->
