--- a/0-teste/portifolio3/index.html
+++ b/0-teste/portifolio3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
@@ -186,7 +186,7 @@
     <h3>Edson</h3>
     <p>Futuro desenvolvedor Java</p>
     <p><span>Entre em contato:</span> edson3711.es@gmail.com</p>
-    <p><span>Ou pelo telefone:</span> (11)99823-2603</p>
+    <p><span>Ou pelo telefone/whatsapp:</span> (11)99823-2603</p>
   </footer>
 </body>
 
