--- a/0-teste/portifolio3/index.html
+++ b/0-teste/portifolio3/index.html
@@ -161,7 +161,7 @@
       
     </div>
     <div class="detail" id="detail-3">
-      <img src="img/hrz-5.jpg" alt="" />
+      <img src="img/Adota-Facil.png" alt="" />
       <div class="detail-description">
         <h3>Adota Fácil</h3>
         <ul>
