update projeto -portifolio3

--- a/4-portifolio/portifolio3/index.html
+++ b/4-portifolio/portifolio3/index.html
@@ -19,20 +19,20 @@
 </head>
 
 <body>
-  <header id="event-subscription">
-    <div id="disclaimer">
+  <header id="introduction-section">
+    <div id="about">
       <h2>Portifólio</h2>
-      <p class="about-event">
+      <p class="about-me">
         Ola , eu sou o Edson
       </p>
       <!-- <p>Data do evento:</p> -->
-      <p class="event-date">Tenho conhecimentos  HTML , CSS e Java Script</p>
-      <p class="event-date"> Lógica de programação, Java, Spring</p>
-      <p class="event-date"> Banco de dados postgreSql e Sql Server, linguagens SQL</p>
-      <p class="event-date"> E nas metodologias Scrum, PMBOK, Cascata, Prototipagem,</p>
-      <p class="event-date">  Espiral, Incremental, RUP e XP.</p> 
+      <p class="event-notion">Tenho conhecimentos  HTML , CSS e Java Script</p>
+      <p class="event-notion"> Lógica de programação, Java, Spring</p>
+      <p class="event-notion"> Banco de dados postgreSql e Sql Server, linguagens SQL</p>
+      <p class="event-notion"> E nas metodologias Scrum, PMBOK, Cascata, Prototipagem,</p>
+      <p class="event-notion">  Espiral, Incremental, RUP e XP.</p> 
        
-        <div class="visit atalho" style="">
+        <div class="btn-group btn-about" style="">
           <div style="">
             <a href="https://github.com/Sousa-Edson" style="" class="btn contato">GitHub</a>
           </div>
@@ -74,33 +74,33 @@
       </form> -->
     </div>
   </header>
-  <section id="key-benefits">
+  <section id="some-working">
     <h2>Alguns conhecimentos que venho trabalhando para melhorar:</h2>
-    <div class="benefits">
-      <div class="benefit">
-        <div id="benefit-1" class="benefit-img"></div>
+    <div class="technologies">
+      <div class="technology">
+        <div id="technology-1" class="technology-img"></div>
         <p>
           Back End.
         </p>
       </div>
-      <div class="benefit">
-        <div id="benefit-2" class="benefit-img"></div>
+      <div class="technology">
+        <div id="technology-2" class="technology-img"></div>
         <p>
           Front End.
         </p>
       </div>
-      <div class="benefit">
-        <div id="benefit-3" class="benefit-img"></div>
+      <div class="technology">
+        <div id="technology-3" class="technology-img"></div>
         <p>
           Banco de dados
         </p>
       </div>
     </div>
   </section>
-  <section id="key-benefits">
+  <section id="some-working">
     <h2>Sou formado em:</h2>
   </section>
-  <section id="location">
+  <section id="formation">
 
     <div id="address">
       <i class="bi bi-geo-alt-fill"></i>
@@ -110,14 +110,14 @@
         <p>Barueri - SP</p>
       </div>
     </div>
-    <div id="about-location">
+    <div id="about-formation">
       <h3>Tecnico de logistica</h3>
       <p>
         Pelo Instituto Técnico de Barueri - PROF. MOACYR DOMINGOS SÁVIO VERONEZI.
       </p>
     </div>
   </section>
-  <section id="location2">
+  <section id="formation2">
     <div id="address">
       <i class="bi bi-geo-alt-fill"></i>
       <div id="address-details">
@@ -126,7 +126,7 @@
         <p>Barueri - SP</p>
       </div>
     </div>
-    <div id="about-location">
+    <div id="about-formation">
       <h3>Tecnico de Informatica</h3>
       <p>
         Pelo Instituto Técnico de Barueri - BRASÍLIO FLORES DE AZEVEDO .
@@ -152,7 +152,7 @@
           <li>Ide usada NetBeans 8.2</li>
           <li>Contruido para satisfazer a uma necessidade na empresa que eu trabalho</li>
         </ul>
-        <div class="visit">
+        <div class="btn-group">
           <a href="https://github.com/Sousa-Edson/SysEstoque1" style="" class="btn  ">Link do projeto</a>
         </div>  
       
@@ -172,13 +172,13 @@
           <li>Banco de dados Microsoft SQL Server</li>
           <li>Elaborado como projeto integrador</li>
         </ul>
-        <div class="visit">
+        <div class="btn-group">
           <a href="https://github.com/ProfNpc/adocao-animais" style="" class="btn  ">Link do projeto</a>
         </div> 
       </div>
     </div>
   </section>
-  <section id="cta">
+  <section id="contact">
     <h3>Gostou? Então entre em contato:</h3>
     <div>
       <div >
