update projeto -portifolio 3 corrigindo style que não existe

--- a/4-portifolio/portifolio3/index.html
+++ b/4-portifolio/portifolio3/index.html
@@ -29,9 +29,9 @@
       <p class="event-notion"> Banco de dados postgreSql e Sql Server, linguagens SQL</p>
       <p class="event-notion"> E nas metodologias Scrum, PMBOK, Cascata, Prototipagem,</p>
       <p class="event-notion"> Espiral, Incremental, RUP e XP.</p>
-      <div class="btn-group btn-about" style="">
-        <div style="">
-          <a href="https://github.com/Sousa-Edson" style="" class="btn contato">GitHub</a>
+      <div class="btn-group btn-about"  >
+        <div  >
+          <a href="https://github.com/Sousa-Edson"   class="btn contato">GitHub</a>
         </div>
         <div style=" ">
           <a href="https://www.linkedin.com/in/edson-sousa-b0769a181/" class="btn contato">Linkedin</a>
@@ -39,8 +39,8 @@
       </div>
 
     </div>
-    <div id="">
-      <div style="">
+    <div  >
+      <div  >
         <img style="  border-radius: 1%; " src="img/foto_redonda_2-removebg-preview.png" alt="">
       </div>
     </div>
@@ -124,7 +124,7 @@
           <li>Contruido para satisfazer a uma necessidade na empresa que eu trabalho</li>
         </ul>
         <div class="btn-group">
-          <a href="https://github.com/Sousa-Edson/SysEstoque1" style="" class="btn  ">Link do projeto</a>
+          <a href="https://github.com/Sousa-Edson/SysEstoque1"   class="btn  ">Link do projeto</a>
         </div>
       </div>
       <img src="img/Exibir-telas.png" alt="" />
@@ -143,7 +143,7 @@
           <li>Elaborado como projeto integrador</li>
         </ul>
         <div class="btn-group">
-          <a href="https://github.com/ProfNpc/adocao-animais" style="" class="btn  ">Link do projeto</a>
+          <a href="https://github.com/ProfNpc/adocao-animais"   class="btn  ">Link do projeto</a>
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@
     <h3>Gostou? Então entre em contato:</h3>
     <div>
       <div>
-        <a href="https://github.com/Sousa-Edson" style="" class="btn contato">GitHub</a>
+        <a href="https://github.com/Sousa-Edson"   class="btn contato">GitHub</a>
       </div>
       <div>
         <a href="https://www.linkedin.com/in/edson-sousa-b0769a181/" class="btn contato">Linkedin</a>
